== 2009-12-02

* PostgreSQL is now supported (via morgoth)

== 2008-07-17

* Can now use a named_scope to find tags!

== 2008-06-23

* Can now find related objects of another class (tristanzdunn)
* Removed extraneous down migration cruft (azabaj)

== 2008-06-09
 
 * Added support for Single Table Inheritance
 * Adding gemspec and rails/init.rb for gemified plugin
 
== 2007-12-12

 * Added ability to use dynamic tag contexts
 * Fixed missing migration generator